# MWE_parallel_reduce

./: CMakeLists.txt  README.md  main.cpp
